# UAV_Classifier

./: .gitignore  README.md  __init__.py  augment.py  config.py  dads_dataset.py  dataloader.py  dataset.py  eval_ground_truth_metrics.py  model.py  preprocess.py  pyproject.toml  tracking.py  train.py
beats/: BEATs.py  __init__.py
