[project]
name = "micaudio-training"
version = "0.1.0"
description = "x502 listen-channel classifier training"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "soundfile>=0.12",
    "torch>=2.0",
    "torchaudio>=2.0",
    "tqdm>=4.66",
    "matplotlib>=3.7",
    "mlflow>=2.10",
]

[tool.uv]
package = false
